refactor: add api list chambers

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,11 +2,14 @@
   "cSpell.words": [
     "apexcharts",
     "datepicker",
+    "DEGE",
     "frigosul",
     "hookform",
     "jspdf",
     "maskedinput",
+    "sparkline",
     "tailwindcss",
+    "tanstack",
     "vaul"
   ]
 }
