--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@rocketseat/eslint-config": "^2.2.2",
+    "@tanstack/react-query": "^5.56.2",
     "apexcharts": "^3.50.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "html2canvas": "^1.4.1",
+    "json-server": "1.0.0-beta.3",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.408.0",
     "next": "14.2.5",
