feat: create update user

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,10 +4,12 @@
     "datepicker",
     "DEGE",
     "frigosul",
+    "Graxaria",
     "hookform",
     "jspdf",
     "maskedinput",
     "sparkline",
+    "supersecretkey",
     "tailwindcss",
     "tanstack",
     "vaul"
