refacto: alter form generate Chart

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,11 +3,14 @@
     "apexcharts",
     "datepicker",
     "DEGE",
+    "dyan",
+    "Dyan",
     "frigosul",
     "Graxaria",
     "hookform",
     "jspdf",
     "maskedinput",
+    "ortiz",
     "sparkline",
     "supersecretkey",
     "tailwindcss",
