--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "dev": "next dev",
     "start": "next start",
     "json-server": "json-server --watch db.json -p 3333"
-
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@prisma/client": "5.20.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -21,7 +21,7 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@rocketseat/eslint-config": "^2.2.2",
     "@tanstack/react-query": "^5.56.2",
-    "apexcharts": "^3.50.0",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -31,7 +31,9 @@
     "jspdf": "^2.5.2",
     "lucide-react": "^0.408.0",
     "next": "14.2.5",
+    "next-auth": "5.0.0-beta.22",
     "next-themes": "^0.3.0",
+    "nookies": "^2.5.2",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
     "react-datepicker": "^7.3.0",
@@ -47,6 +49,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -56,7 +59,9 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
+    "prisma": "^5.20.0",
     "tailwindcss": "^3.4.5",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
