feat: add next auth and middleware

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 
 DATABASE_URL="postgresql://postgres:termografia@localhost:5432/db_termografia?schema=public"
 
-
+NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_SECRET="PjulX/6NoCA/1/JyM7zb+OGP359IKb64IfnRgvVkHdc="
