--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "dev": "next dev",
     "start": "next start",
+    "build": "next build",
+    "lint": "next lint",
     "server": "json-server --watch db.json --port 3333"
   },
   "prisma": {
