--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
-    "@prisma/client": "5.20.0",
+    "@prisma/client": "5.21.1",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -31,6 +31,7 @@
     "@rocketseat/eslint-config": "^2.2.2",
     "@snaplet/seed": "^0.98.0",
     "@tanstack/react-query": "^5.56.2",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -71,7 +72,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
-    "prisma": "^5.20.0",
+    "prisma": "^5.21.1",
     "tailwindcss": "^3.4.5",
     "tsx": "^4.19.1",
     "typescript": "^5"
