--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,9 @@ services:
       POSTGRES_USER: postgres 
       POSTGRES_PASSWORD: termografia 
       POSTGRES_DB: db_termografia
+      POSTGRES_TIMEZONE: America/Sao_Paulo
     ports:
       - "5432:5432"
+    volumes:
+      - /etc/localtime:/etc/localtime:ro
+      - /etc/timezone:/etc/timezone:ro
