--- a/package.json
+++ b/package.json
@@ -7,11 +7,7 @@
     "dev": "next dev",
     "start": "next start",
     "build": "next build",
-    "lint": "next lint",
-    "server": "json-server --watch db.json --port 3333"
-  },
-  "prisma": {
-    "seed": "tsx prisma/seed/seed.ts"
+    "lint": "next lint"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -30,7 +26,7 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@rocketseat/eslint-config": "^2.2.2",
     "@snaplet/seed": "^0.98.0",
-    "@tanstack/react-query": "^5.56.2",
+    "@tanstack/react-query": "^5.59.15",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
@@ -76,8 +72,5 @@
     "tailwindcss": "^3.4.5",
     "tsx": "^4.19.1",
     "typescript": "^5"
-  },
-  "@snaplet/seed": {
-    "config": "prisma/seed/seed.config.ts"
   }
 }
