--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "dayjs": "^1.11.13",
     "html2canvas": "^1.4.1",
     "json-server": "1.0.0-beta.3",
     "jsonwebtoken": "^9.0.2",
