--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-hook-form": "^7.52.1",
     "react-is": "^18.3.1",
     "react-maskedinput": "^4.0.1",
+    "react-to-print": "^3.0.2",
     "recharts": "2.13.0-alpha.5",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
