--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,5 +2,9 @@
   "extends": [
     "@rocketseat/eslint-config/next",
     "next/core-web-vitals"
-  ]
+  ],
+  "rules": {
+    "@typescript-eslint/prefer-promise-reject-errors": "off",
+    "prefer-promise-reject-errors": "off"
+  }
 }
