feat: alters deploy

--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 API_USER="api"
 API_PASSWORD="123456sup"
 BASE_URL="https://192.168.1.240:8002/api/v1"
-DATABASE_URL="postgresql://postgres:termografia@localhost:5432/db_termografia?schema=public"
+DATABASE_URL="postgresql://postgres:termografia@postgres:5432/db_termografia?schema=public"
 
-NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_URL="http://localhost:3030"
+
 NEXTAUTH_SECRET="PjulX/6NoCA/1/JyM7zb+OGP359IKb64IfnRgvVkHdc="
