--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,5 @@
 {
-  "extends": [
-    "@rocketseat/eslint-config/next",
-    "next/core-web-vitals"
-  ],
+  "extends": ["@rocketseat/eslint-config/next", "next/core-web-vitals"],
   "rules": {
     "@typescript-eslint/prefer-promise-reject-errors": "off",
     "prefer-promise-reject-errors": "off"
