fix: alter bcrypt to bcryptjs

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-  "extends": ["@rocketseat/eslint-config/next", "next/core-web-vitals"],
+  "extends": ["next/core-web-vitals", "@rocketseat/eslint-config/next"],
   "rules": {
     "@typescript-eslint/prefer-promise-reject-errors": "off",
     "prefer-promise-reject-errors": "off"
