--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
     "@tanstack/react-query": "^5.59.15",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
+    "eslint-plugin-n": "^17.15.1",
     "html2canvas": "^1.4.1",
     "json-server": "1.0.0-beta.3",
     "jsonwebtoken": "^9.0.2",
@@ -77,8 +79,14 @@
     "@types/react-dom": "^18",
     "@types/react-input-mask": "^3.0.5",
     "@types/react-maskedinput": "^4.0.9",
-    "eslint": "^8.57.0",
+    "@typescript-eslint/eslint-plugin": "^8.25.0",
+    "@typescript-eslint/parser": "^8.25.0",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.2.5",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-prettier": "^5.2.3",
     "postcss": "^8",
     "prisma": "^5.21.1",
     "tailwindcss": "^3.4.5",
