--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": false,
   "scripts": {
     "dev": "next dev",
-    "start": "next start -p 3030",
+    "start": "next start",
     "build": "next build",
     "lint": "next lint",
     "deploy": "git pull origin main && pnpm install && npx prisma migrate deploy && next build"
