--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-API_USER="api"
-API_PASSWORD="123456sup"
-BASE_URL="https://192.168.1.240:8002/api/v1"
-DATABASE_URL="postgresql://postgres:termografia@localhost:5432/db_termografia?schema=public"
+API_USER=
+API_PASSWORD=
+BASE_URL=
+DATABASE_URL=
 
-NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_URL=
 
-NEXTAUTH_SECRET="PjulX/6NoCA/1/JyM7zb+OGP359IKb64IfnRgvVkHdc="
+NEXTAUTH_SECRET=
