fix: remove mask setpoint

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,9 @@
     "NEXTAUTH",
     "ortiz",
     "Resetar",
+    "resf",
+    "setpoint",
+    "Sitrad",
     "snaplet",
     "sonner",
     "sparkline",
