--- a/package.json
+++ b/package.json
@@ -86,8 +86,8 @@
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-prettier": "^5.2.3",
     "postcss": "^8",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "prisma": "^5.21.1",
     "tailwindcss": "^3.4.5",
     "tsx": "^4.19.1",
