--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@snaplet/seed": "^0.98.0",
@@ -39,6 +39,7 @@
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
     "eslint-plugin-n": "^17.15.1",
+    "fuse.js": "^7.1.0",
     "html2canvas": "^1.4.1",
     "json-server": "1.0.0-beta.3",
     "jsonwebtoken": "^9.0.2",
