feat: add workflow deploy

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,12 +12,15 @@
     "frigosul",
     "Graxaria",
     "hookform",
+    "joao",
     "jspdf",
+    "linux",
     "maskedinput",
     "NEXTAUTH",
     "ortiz",
     "Resetar",
     "resf",
+    "serv",
     "setpoint",
     "Sitrad",
     "snaplet",
