--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,10 +15,14 @@ jobs:
 
       - name: Fazer deploy na rede local
         run: |
-          ssh  joao@192.168.4.40 << 'EOF'
-            cd /home/joao/termografia
-            git pull
-            pnpm install
-            pnpm build
-            pm2 restart termo-web
-          EOF
+         ssh joao@192.168.4.40 << 'EOF'
+          set -e
+          set -x
+          source ~/.bashrc
+          cd /home/joao/termografia
+          git pull
+          pnpm install
+          pnpm build
+          pm2 restart termo-web
+         EOF
+
