--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,11 @@ jobs:
       - name: Checar código
         uses: actions/checkout@v3
 
+      - name: Testar conexão SSH
+        run: |
+          ssh -v joao@192.168.4.40 echo "Conectado com sucesso"
+   
+
       - name: Fazer deploy na rede local
         run: |
          ssh joao@192.168.4.40 << 'EOF'
