--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,13 +26,13 @@ jobs:
 
       - name: Fazer deploy na rede local
         run: |
-          ssh joao@192.168.4.40 << 'EOF'
+          ssh -o LogLevel=DEBUG joao@192.168.4.40 "bash -s" <<'EOF'
           set -e
-          set -x
-          source ~/.bashrc
+          echo "INICIANDO DEPLOY"
           cd /home/joao/termografia
           git pull
           pnpm install
           pnpm build
           pm2 restart termo-web
+          echo "DEPLOY CONCLUÍDO"
           EOF
