--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
       
       - name: Fazer deploy na rede local
         run: |
-          ssh -o LogLevel=DEBUG 192.168.4.40 "bash -s" <<'EOF'
+          ssh -o LogLevel=DEBUG -tt joao@192.168.4.40 <<'EOF'
           set -e
           echo "INICIANDO DEPLOY"
           cd /home/joao/termografia
