--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,23 +13,13 @@ jobs:
       - name: Checar código
         uses: actions/checkout@v3
 
-      - name: Configurar chave SSH
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_ed25519
-          chmod 600 ~/.ssh/id_ed25519
+      - name: Configurar ssh-agent com chave privada
+        uses: webfactory/ssh-agent@v0.7.0
+        with:
+          ssh-private-key: ${{ secrets.SSH_KEY }}
 
-      - name: Verificar chave gerada
-        run: |
-         ssh-keygen -y -f ~/.ssh/id_ed25519
-
-      - name: Testar porta SSH
-        run: nc -zv 192.168.4.40 22
-
-
-
-      - name: Testar conexão SSH
-        run: ssh -o StrictHostKeyChecking=no -T joao@192.168.4.40 echo "SSH OK"
+      - name: Conectar e executar comandos no servidor
+        run: ssh -T joao@192.168.4.40 "uptime && echo OK"
 
 
       - name: Fazer deploy na rede local
