--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,13 +24,14 @@ jobs:
 
       - name: Fazer deploy na rede local
         run: |
-          ssh -o LogLevel=DEBUG -tt joao@192.168.4.40 <<'EOF'
+          ssh -o LogLevel=DEBUG joao@192.168.4.40 <<'EOF'
           set -e
           echo "INICIANDO DEPLOY"
           cd /home/joao/termografia
           git pull
-          pnpm install
+          pnpm install --frozen-lockfile --reporter=append-only
           pnpm build
           pm2 restart termo-web
           echo "DEPLOY CONCLUÍDO"
           EOF
+
