--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "cSpell.words": [
     "apexcharts",
     "autoincrement",
+    "cartesian",
     "datasource",
     "datepicker",
     "debian",
@@ -17,6 +18,7 @@
     "linux",
     "maskedinput",
     "NEXTAUTH",
+    "nums",
     "ortiz",
     "Resetar",
     "resf",
