--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "react-is": "^18.3.1",
     "react-maskedinput": "^4.0.1",
     "react-to-print": "^3.1.0",
-    "recharts": "2.13.0-alpha.5",
+    "recharts": "2.15.4",
     "sharp": "^0.33.5",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
