ci: alter ci/cd

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,8 +26,7 @@ jobs:
           cd /home/joao/termografia
           git pull
           pnpm install --frozen-lockfile --reporter=append-only
-          pnpm prisma migrate deploy
-          pnpm build
+          pnpm run build
           pm2 restart termo-web
           echo "DEPLOY CONCLUÍDO"
           EOF
